--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,11 +1,12 @@
     <div id="up-to-top" class="row">
       <div class="small-12 columns" style="text-align: right;">
-        <a class="iconfont" href="#top-of-page">&#xf108;</a>
+        <a class="iconfont" href="#top-of-page">Return to Top &#xf108;</a>
       </div><!-- /.small-12.columns -->
     </div><!-- /.row -->
 
 
     <footer id="footer-content" class="bg-grau">
+    {% comment %}
       <div id="footer">
         <div class="row">
           <div class="medium-6 large-5 columns">
@@ -55,7 +56,7 @@
         </div><!-- /.row -->
 
       </div><!-- /#footer -->
-
+    {% endcomment %}
 
       <div id="subfooter">
         <nav class="row">
