--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -75,11 +75,11 @@ body.video cite { color: #fff; }
     background-color: $primary-color;
 }
 #masthead-with-text {
-    text-align: center;
-    font-size: rem-calc(54);
+    text-align: left;
+    font-size: rem-calc(60);
     font-family: $header-font-family;
     color: #fff;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     text-shadow: 0 2px 3px rgba(0,0,0,.4);
 }
 #masthead-no-image-header {
@@ -133,8 +133,8 @@ body.video cite { color: #fff; }
         padding: 20px 0;
     }
     #masthead-with-text {
-        padding: 60px 0;
-        height: 300px;
+        padding: 20px 0;
+        height: 330px;
     }
 }
 
@@ -156,8 +156,8 @@ body.video cite { color: #fff; }
         padding: 30px 0;
     }
     #masthead-with-text {
-        height: 330px;
-        padding: 60px 0;
+        height: 250px;
+        padding: 20px 0;
     }
 }
 
@@ -179,8 +179,8 @@ body.video cite { color: #fff; }
         padding: 45px 0;
     }
     #masthead-with-text {
-        padding: 95px 0;
-        height: 400px;
+        padding: 20px 0;
+        height: 300px;
     }
 }
 
