Some aesthetic changes

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -6,26 +6,37 @@
 
 
     <footer id="footer-content" class="bg-grau">
-    {% comment %}
       <div id="footer">
         <div class="row">
           <div class="medium-6 large-5 columns">
-            <h5 class="shadow-black">{{ site.data.language.info_website }}</h5>
+            <h5>{{ site.data.language.info_website }}</h5>
 
-            <p class="shadow-black">
+            <p>
               {{ site.description }}
-              <a href="{{ site.url }}{{ site.baseurl }}/info/">{{ site.data.language.more }}</a>
+              <a href="{{ site.url }}{{ site.baseurl }}/research/">{{ site.data.language.more }}</a>
             </p>
           </div><!-- /.large-6.columns -->
 
 
-          <div class="small-6 medium-3 large-3 large-offset-1 columns">
+          <div class="small-6 medium-6 large-6 columns" style="text-align:right">
+            {% comment %}
             {% for service_item in site.data.services %}
               {% if forloop.first == true %}
                 <h5 class="shadow-black">{{ service_item.menu_name }}</h5>
               {% endif %}
             {% endfor %}
-
+            {% endcomment %}
+            <h5>Contact Us</h5>
+            <p>
+            CESE 214, IIT Kanpur
+            <br />
+            Kanpur, UP 208016
+            <br />
+            E-mail: isen [at] iitk.ac.in
+            <br />
+            Phone: +91—0512-679-7514
+            </p>
+            {% comment %}
               <ul class="no-bullet shadow-black">
               {% for service_item in site.data.services %}
                 {% if service_item.url contains 'http' %}{% assign domain = '' %}{% else %}{% capture domain %}{{ site.url }}{{ site.baseurl }}{% endcapture %}{% endif %}
@@ -34,9 +45,10 @@
                   </li>
               {% endfor %}
               </ul>
+            {% endcomment %}
           </div><!-- /.large-4.columns -->
 
-
+        {% comment %}
           <div class="small-6 medium-3 large-3 columns">
             {% for network_item in site.data.network %}
               {% if forloop.first == true %}
@@ -53,10 +65,10 @@
             {% endfor %}
             </ul>
           </div><!-- /.large-3.columns -->
+        {% endcomment %}
         </div><!-- /.row -->
 
       </div><!-- /#footer -->
-    {% endcomment %}
 
       <div id="subfooter">
         <nav class="row">
