--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -80,7 +80,7 @@ body.video cite { color: #fff; }
     font-family: $header-font-family;
     color: #fff;
     // text-transform: uppercase;
-    text-shadow: 0 2px 3px rgba(0,0,0,.4);
+    // text-shadow: 0 2px 3px rgba(0,0,0,.4);
 }
 #masthead-no-image-header {
     height: 175px;
@@ -108,10 +108,13 @@ body.video cite { color: #fff; }
     #masthead-with-text {
         height: 220px;
         padding: 30px 0;
-        font-size: rem-calc(36);
+        font-size: rem-calc(30);
     }
     #masthead-no-image-header {
         display: none;
+    }
+    .masthead-subtitle {
+    	font-size: rem-calc(24);
     }
 }
 
@@ -135,6 +138,10 @@ body.video cite { color: #fff; }
     #masthead-with-text {
         padding: 20px 0;
         height: 330px;
+        font-size: rem-calc(50);
+    }
+    .masthead-subtitle {
+    	font-size: rem-calc(25);
     }
 }
 
@@ -158,6 +165,9 @@ body.video cite { color: #fff; }
     #masthead-with-text {
         height: 250px;
         padding: 20px 0;
+    }
+    .masthead-subtitle {
+    	font-size: rem-calc(30);
     }
 }
 
