--- a/_sass/_04_settings_global.scss
+++ b/_sass/_04_settings_global.scss
@@ -1388,7 +1388,7 @@ $topbar-title-font-size: rem-calc(19);
 // $topbar-dropdown-link-weight: $font-weight-normal;
 // $topbar-dropdown-toggle-size: 5px;
 // $topbar-dropdown-toggle-color: $ci-2;
-// $topbar-dropdown-toggle-alpha: 0.4;
+$topbar-dropdown-toggle-alpha: 0.8;
 
 // Set the link colors and styles for top-level nav
 // $topbar-link-color: #000;
