--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -80,7 +80,7 @@ body.video cite { color: #fff; }
     font-family: $header-font-family;
     color: #fff;
     // text-transform: uppercase;
-    // text-shadow: 0 2px 3px rgba(0,0,0,.4);
+    text-shadow: 0 5px 5px rgba(0,0,0,.5);
 }
 #masthead-no-image-header {
     height: 175px;
@@ -106,7 +106,7 @@ body.video cite { color: #fff; }
         padding: 15px 0;
     }
     #masthead-with-text {
-        height: 220px;
+        height: 330px;
         padding: 30px 0;
         font-size: rem-calc(30);
     }
@@ -137,7 +137,7 @@ body.video cite { color: #fff; }
     }
     #masthead-with-text {
         padding: 20px 0;
-        height: 330px;
+        height: 430px;
         font-size: rem-calc(50);
     }
     .masthead-subtitle {
@@ -163,7 +163,7 @@ body.video cite { color: #fff; }
         padding: 30px 0;
     }
     #masthead-with-text {
-        height: 250px;
+        height: 470px;
         padding: 20px 0;
     }
     .masthead-subtitle {
@@ -190,7 +190,7 @@ body.video cite { color: #fff; }
     }
     #masthead-with-text {
         padding: 20px 0;
-        height: 300px;
+        height: 500px;
     }
 }
 
