--- a/_includes/_footer_scripts.html
+++ b/_includes/_footer_scripts.html
@@ -5,7 +5,7 @@ $('audio,video').mediaelementplayer();
 {% endif %}
 
 
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/javascript.min.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/javascript.js"></script>
 
 
 {% if page.header.image_fullwidth %}
