--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -106,7 +106,7 @@ body.video cite { color: #fff; }
         padding: 15px 0;
     }
     #masthead-with-text {
-        height: 330px;
+        height: 330px !important;
         padding: 30px 0;
         font-size: rem-calc(30);
     }
@@ -137,7 +137,7 @@ body.video cite { color: #fff; }
     }
     #masthead-with-text {
         padding: 20px 0;
-        height: 430px;
+        height: 430px !important;
         font-size: rem-calc(50);
     }
     .masthead-subtitle {
