--- a/_includes/_footer_scripts.html
+++ b/_includes/_footer_scripts.html
@@ -6,7 +6,8 @@ $('audio,video').mediaelementplayer();
 
 
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/javascript.js"></script>
-
+<script async src="https://badge.dimensions.ai/badge.js" charset="utf-8"></script>
+<script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
 
 {% if page.header.image_fullwidth %}
 <script>
