--- a/_includes/_frontpage-widget.html
+++ b/_includes/_frontpage-widget.html
@@ -24,6 +24,12 @@
 	{% endif %}
 	<h2 class="font-size-h3 t10" style="text-align:center">{{ include.widget.title }}</h2>
 
-	{% if include.widget.text != empty %}<p>{{ include.widget.text }}</p>{% endif %}
+	{% if include.widget.text != empty %}
+	{% if include.widget.text | slice 0,3 == "<div" %}
+	{{include.widget.text}}
+	{% else %}
+	<p>{{ include.widget.text }}</p>
+	{% endif %}
+	{% endif %}
 	{% if widget_url != empty %}<p><a class="button tiny radius" href="{{ widget_url }}" style="margin:auto;display:block;width:fit-content;">{% if include.widget.buttontext == NULL %}{{site.data.language.more }}{% else %}{{ include.widget.buttontext}}{% endif %}</a></p>{% endif %}
 </div>
