--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -80,7 +80,7 @@ body.video cite { color: #fff; }
     font-family: $header-font-family;
     color: #fff;
     // text-transform: uppercase;
-    text-shadow: 0 5px 5px rgba(0,0,0,.5);
+//     text-shadow: 0 5px 5px rgba(0,0,0,.5);
 }
 #masthead-no-image-header {
     height: 175px;
@@ -97,17 +97,17 @@ body.video cite { color: #fff; }
         display: none;
     }
     #masthead {
-        height: 200px;
+        // height: 200px;
     }
     #masthead-with-pattern {
-        padding: 15px 0;
+        padding: 55px 0;
     }
     #masthead-with-background-color {
-        padding: 15px 0;
+        padding: 55px 0;
     }
     #masthead-with-text {
-        height: 330px !important;
-        padding: 30px 0;
+        // height: 330px !important;
+        padding-top: 55px;
         font-size: rem-calc(30);
     }
     #masthead-no-image-header {
@@ -127,17 +127,17 @@ body.video cite { color: #fff; }
         margin-top: 60px;
     }
     #masthead {
-        height: 280px;
+        // height: 280px;
     }
     #masthead-with-pattern {
-        padding: 20px 0;
+        padding-top: 50px;
     }
     #masthead-with-background-color {
-        padding: 20px 0;
+        padding-top: 50px;
     }
     #masthead-with-text {
-        padding: 20px 0;
-        height: 430px !important;
+        padding-top: 50px;
+        // height: 430px !important;
         font-size: rem-calc(50);
     }
     .masthead-subtitle {
@@ -154,17 +154,17 @@ body.video cite { color: #fff; }
         margin-top: 80px;
     }
     #masthead {
-        height: 310px;
+        // height: 310px;
     }
     #masthead-with-pattern {
-        padding: 30px 0;
+        padding-top: 50px;
     }
     #masthead-with-background-color {
-        padding: 30px 0;
+        padding-top: 50px;
     }
     #masthead-with-text {
-        height: 470px;
-        padding: 20px 0;
+        // height: 470px;
+        padding-top: 50px;
     }
     .masthead-subtitle {
     	font-size: rem-calc(30);
@@ -180,7 +180,7 @@ body.video cite { color: #fff; }
         margin-top: 110px;
     }
     #masthead {
-        height: 380px;
+        // height: 380px;
     }
     #masthead-with-pattern {
         padding: 45px 0;
@@ -189,8 +189,8 @@ body.video cite { color: #fff; }
         padding: 45px 0;
     }
     #masthead-with-text {
-        padding: 20px 0;
-        height: 500px;
+        padding-top: 50px;;
+        // height: 500px;
     }
 }
 
