--- a/_includes/_masthead.html
+++ b/_includes/_masthead.html
@@ -22,7 +22,7 @@
 
 <div id="masthead-with-text" style="{% if page.header.background-color %}background: {{ page.header.background-color }};{% endif %} {% if page.header.image_fullwidth %}background-image:url({{ site.urlimg }}{{ page.header.image_fullwidth }});background-size:cover;{% elsif page.header.pattern %}background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4)), url('{{ site.urlimg }}/{{ page.header.pattern }}'){% endif %}">
     <div style="width:100%">
-        <div class="row" style="margin-left:10px;">
+        <div class="row" style="">
             <div class="small-12 columns">
                 <div class="masthead-title">{{ page.header.title }}</div>
             </div><!-- /.small-12.columns -->
