--- a/_sass/_06_typography.scss
+++ b/_sass/_06_typography.scss
@@ -93,9 +93,18 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
     padding: 0;
 }
+
+.flexible {
+h1,h2,h3,h4,h5,h6 {
+	width: 100%;
+	text-align: center;
+}
+}
+
 h1 {
     font-size: $font-size-h1;
     margin-top: 0;
+    text-align: center;
 }
 h2 {
     font-size: $font-size-h2;
