--- a/_sass/foundation-components/_grid.scss
+++ b/_sass/foundation-components/_grid.scss
@@ -69,6 +69,7 @@ $last-child-float: $opposite-direction !default;
   // use @include grid-row; to use a container row
   @else {
     width: 100%;
+    padding: 0 20px;
     margin-#{$default-float}: auto;
     margin-#{$opposite-direction}: auto;
     margin-top: 0;
